--- a/popup/main.html
+++ b/popup/main.html
@@ -15,6 +15,7 @@
    <input type="radio" id="hours" name="time" value="hours">
    <label for="hours">hours</label><br>
    <button class="standTime">create</button>
+   <button class="removeTime">remove</button>
  </div>
   <div id="timeRemain-container">
   </div>
