feat: setup timer to countdown dynamically

--- a/popup/main.html
+++ b/popup/main.html
@@ -21,6 +21,7 @@
   </div>
 </div>
   <script src="script.js"></script>
+  <script src="../node_modules/easytimer.js/dist/easytimer.min.js"></script>
     </body>
 
 </html>
