feat: added in some styling

--- a/popup/main.html
+++ b/popup/main.html
@@ -10,7 +10,7 @@
 <div id="content">
  <div id="standUp">
    <input type="text" id="stand" maxlength="3" />
-   <input type="radio" id="minutes" name="time" value="minutes">
+   <input type="radio" id="minutes" name="time" value="minutes" checked>
    <label for="minutes">minutes</label><br>
    <input type="radio" id="hours" name="time" value="hours">
    <label for="hours">hours</label><br>
